--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "passport-oauth2": "^1.8.0",
     "zod": "^3.24.3"
   },
@@ -27,6 +29,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.14.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-oauth2": "^1.4.17",
     "prisma": "^6.6.0",
     "tsx": "^4.19.3",
