--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cleanup": "tsx --env-file=.env ./prisma/cleanup.ts",
     "seed-dev": "tsx --env-file=.env ./prisma/seed.ts",
     "dev": "tsx watch --env-file=.env ./src/server.ts",
+    "build": "tsc",
     "seed": "node dist/prisma/seed.js",
     "prestart": "npm run build && npm run seed",
     "start": "node dist/src/server.js"
