--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,9 @@
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
     /* Modules */
-    "module": "ESNext" /* Specify what module code is generated. */,
+    "module": "NodeNext" /* Specify what module code is generated. */,
     // "rootDir": "./src" /* Specify the root folder within your source files. */,
-    "moduleResolution": "Node" /* Specify how TypeScript looks up a file from a given module specifier. */,
+    "moduleResolution": "NodeNext" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "./" /* Specify the base directory to resolve non-relative module names. */,
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": ["./src"],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -106,15 +106,9 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-    // "typeRoots": ["/"],
-    "resolveJsonModule": true,
-    "allowJs": true,
-    "sourceMap": true,
-    "paths": {
-      "*": ["node_modules/*", "src/*"]
-    }
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    // "typeRoots": ["/"]
   },
-  "include": ["src/**/*", "prisma/**/*"], // Include all files in src
+  "include": ["src/**/*", "prisma/**/*", "custom.d.ts"], // Include all files in src
   "exclude": ["node_modules", "dist"] // Exclude node_modules and output folder
 }
